--- a/app/threading/client/views/creationDialog/CreateThread.html
+++ b/app/threading/client/views/creationDialog/CreateThread.html
@@ -86,14 +86,16 @@
 			</form>
 			<div class="rc-input rc-space-between">
 				<button id="prev"
-						class="rc-button rc-button--primary {{prevIsDisabled}}" {{prevIsDisabled}}>{{_ "Thread_modal_prev"}}</button>
+						class="rc-button rc-button--primary {{prevIsDisabled}}" {{prevIsDisabled}}>{{_
+						"Thread_modal_prev"}}</button>
 				{{#if isLastSlide}}
 					<button form="create-thread"
 							class="rc-button rc-button--primary js-save-thread {{createIsDisabled}}" {{createIsDisabled}}>{{_
 							"Create"}}</button>
 				{{else}}
 					<button id="next"
-							class="rc-button rc-button--primary {{nextIsDisabled}}" {{nextIsDisabled}}>{{_ "Thread_modal_next"}}</button>
+							class="rc-button rc-button--primary {{nextIsDisabled}}" {{nextIsDisabled}}>{{_
+							"Thread_modal_next"}}</button>
 				{{/if}}
 			</div>
 		</div>
