--- a/app/threading/client/public/stylesheets/threading.css
+++ b/app/threading/client/public/stylesheets/threading.css
@@ -33,11 +33,50 @@
 	color: #aaaaaa;
 }
 
-.rc-input-radio__container {
-	margin: 5px;
-	padding: 4px;
+.flex-wrap {
+	display: flex;
+	flex-wrap: wrap;
+}
 
-	border: 2px solid;
-	border-color: var(--input-border-color);
-	border-radius: var(--input-border-radius);
+.rc-input-radios__title {
+	padding: 10px 0 5px;
+	/*color: var(--color-dark);*/
+	/*background-color: var(--color-gray);*/
+	/*font-weight: bold;*/
+}
+
+.rc-input-radios__container {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	padding: 10px 0 35px;
+}
+
+.rc-input-radio__container {
+	margin-right: 10px;
+	padding: 12px 0;
+}
+
+.rc-input__radio {
+	width: 0;
+	height: 0;
+	opacity: 0;
+	position: absolute;
+}
+
+.rc-input-radio__label {
+	color: var(--color-gray);
+	padding: 5px 10px;
+	border-width: 2px;
+	border-color: var(--color-gray);
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.rc-input__radio:checked ~ label {
+	/*border-width: 0;*/
+	border-color: var(--rc-color-button-primary-light);
+	background-color: var(--rc-color-button-primary-light);
+	color: white;
+	font-weight: bold;
 }
