--- a/app/theme/client/imports/components/modal.css
+++ b/app/theme/client/imports/components/modal.css
@@ -156,10 +156,17 @@
 		bottom: 0;
 		left: 0 !important;
 
+		overflow: scroll;
+
 		width: 100%;
 		min-width: 100%;
 		max-width: 100%;
 
 		animation: dropup-show 0.3s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+	}
+
+	.rc-modal__content {
+		min-height: 100% !important;
+		max-height: 100% !important;
 	}
 }
