--- a/app/ui/client/components/header/headerRoom.html
+++ b/app/ui/client/components/header/headerRoom.html
@@ -1,5 +1,5 @@
 <template name="headerRoom">
-	<header class="rc-header rc-header--room" >
+	<header class="rc-header rc-header--room">
 		<div class="rc-header__wrap">
 
 			<div class="rc-header__block rc-header--burger">
@@ -14,7 +14,8 @@
 
 			{{#if showToggleFavorite}}
 				<div class="rc-header__block rc-header__favorite rc-header__block--action">
-					<a href="#favorite" class="rc-header__toggle-favorite rc-header__first-icon {{state}}">{{> icon block="rc-header__icon" icon="star"}}</a>
+					<a href="#favorite"
+					   class="rc-header__toggle-favorite rc-header__first-icon {{state}}">{{> icon block="rc-header__icon" icon="star"}}</a>
 				</div>
 			{{/if}}
 
@@ -25,51 +26,65 @@
 
 			<div class="rc-header__content rc-header__block">
 				{{#if isDirect}}
-				<div class="rc-header__block">
-					<div class="rc-header__image">
-						{{> avatar username=avatarBackground}}
+					<div class="rc-header__block">
+						<div class="rc-header__image">
+							{{> avatar username=avatarBackground}}
+						</div>
 					</div>
-				</div>
 				{{/if}}
 
 				<div class="rc-header__data">
 					{{#unless secondaryName}}
-					<div class="rc-header__name">{{> icon block="rc-header__icon" icon=roomIcon}}{{roomName}}</div>
+						<div class="rc-header__name">{{> icon block="rc-header__icon" icon=roomIcon}}{{roomName}}</div>
 					{{else}}
-					<div class="rc-header__name">{{roomName}} <div class="rc-header__username">@{{secondaryName}}</div></div>
+						<div class="rc-header__name">{{roomName}}
+							<div class="rc-header__username">@{{secondaryName}}</div>
+						</div>
 					{{/unless}}
 
 					{{#if isDirect}}
-					<span class="rc-header__status">
-						<div class="rc-header__status-bullet rc-header__status-bullet--{{userStatus}}" title="{{_ userStatus}}"></div>
+						<span class="rc-header__status">
+						<div class="rc-header__status-bullet rc-header__status-bullet--{{userStatus}}"
+							 title="{{_ userStatus}}"></div>
 						<div class="rc-header__visual-status">{{_ userStatus}}</div>
 					</span>
 					{{else}}
-					{{#if roomTopic}}<span class="rc-header__topic">{{{roomTopic}}}</span>{{/if}}
+						{{#if roomTopic}}<span class="rc-header__topic">{{{roomTopic}}}</span>{{/if}}
 					{{/if}}
 				</div>
 
 				{{#if sentimentSmile}}
-				<span class="sentiment">{{sentimentSmile}}</span>
+					<span class="sentiment">{{sentimentSmile}}</span>
 				{{/if}}
 				{{#if isTranslated}}
-				<i class="icon-language" aria-label="{{_ "Translated"}}"></i>
+					<i class="icon-language" aria-label="{{_ "Translated"}}"></i>
 				{{/if}}
 			</div>
 
 			{{#if isSection}}
-			<span class="rc-header__block">{{_ sectionName}}</span>
+				<span class="rc-header__block">{{_ sectionName}}</span>
 			{{/if}}
 			{{#if encryptionState}}
-			<div class="rc-header__block rc-header__block-action rc-header__encryption">
-				<div class="rc-room-actions">
-					<button aria-label="{{_ 'E2E_Enabled'}}" class="rc-tooltip rc-tooltip--down rc-room-actions__action tab-button rc-header__toggle-encryption js-toggle-encryption {{encryptionState}}">{{> icon icon="key"}}</button>
+				<div class="rc-header__block rc-header__block-action rc-header__encryption">
+					<div class="rc-room-actions">
+						<button aria-label="{{_ 'E2E_Enabled'}}"
+								class="rc-tooltip rc-tooltip--down rc-room-actions__action tab-button rc-header__toggle-encryption js-toggle-encryption {{encryptionState}}">{{> icon icon="key"}}</button>
+					</div>
 				</div>
-			</div>
 			{{/if}}
 			{{#if Template.contentBlock}}
 				{{> Template.contentBlock}}
 			{{/if}}
 		</div>
 	</header>
+	<div class="topic__tags">
+		<span class="topic__tag">{{tags.coltura}}</span>
+		<span class="topic__tag">{{tags.eta}}</span>
+		<span class="topic__tag">{{tags.allevamento}}</span>
+		<span class="topic__tag">{{tags.varieta}}</span>
+		<span class="topic__tag">{{tags.posizione}}</span>
+		<span class="topic__tag">{{tags.esposizione}}</span>
+		<span class="topic__tag">{{tags.genere}}</span>
+		<span class="topic__tag">{{tags.tipoFitosanitario}}</span>
+	</div>
 </template>
